--- a/Develop/public/index.html
+++ b/Develop/public/index.html
@@ -41,6 +41,14 @@
     <canvas id="myChart"></canvas>
   </div>
 
+  function saveRecord(record) {
+    const transaction = db.transaction(['new_transaction'], 'readwrite');
+
+    const transactionObjectStore = transaction.objectStore('new_transaction');
+
+    transactionObjectStore.add(record);
+};
+
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
   <script src="js/index.js"></script>
 </body>
